--- a/uj/index.html
+++ b/uj/index.html
@@ -37,6 +37,82 @@
 	<li><a href="uj/zajecia/25-26z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
 </ul>
 
+<table class="time-table">
+	<thead>
+		<tr>
+			<th></th>
+			<th>Wtorek</th>
+			<th>Środa</th>
+			<th>Czwartek</th>
+			<th>Piątek</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>08.00–08.45</th>
+			<td rowspan="7"></td>
+			<td rowspan="3" class="schedule-lecture">LJK4</td>
+			<td rowspan="5"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th>08.45–09.30</th>
+			<td rowspan="2" class="schedule-lecture">KLC3</td>
+		</tr>
+		<tr>
+			<th>09.30–11.15</th>
+		</tr>
+		<tr>
+			<th>11.15–13.00</th>
+			<td rowspan="5"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th>13.00–13.50</th>
+			<td rowspan="2" class="schedule-presentation">Konsultacje</td>
+		</tr>
+		<tr>
+			<th>13.50–14.00</th>
+			<td rowspan="2" class="schedule-lecture">JK3</td>
+		</tr>
+		<tr>
+			<th>14.00–14.50</th>
+			<td rowspan="8"></td>
+		</tr>
+		<tr>
+			<th>15.00–15.25</th>
+			<td rowspan="3" class="schedule-lecture">ASSK</td>
+			<td rowspan="2"></td>
+		</tr>
+		<tr>
+			<th>15.25–15.30</th>
+			<td rowspan="3" class="schedule-lecture">JK2</td>
+		</tr>
+		<tr>
+			<th>15.30–16.15</th>
+			<td class="schedule-lecture">JK1</td>
+		</tr>
+		<tr>
+			<th>16.15–16.20</th>
+			<td></td>
+			<td rowspan="4"></td>
+		</tr>
+		<tr>
+			<th>16.45–17.30</th>
+			<td rowspan="2" class="schedule-lecture">LICC</td>
+			<td></td>
+		</tr>
+		<tr>
+			<th>17.30–18.15</th>
+			<td rowspan="2" class="schedule-lecture">ITAS</td>
+		</tr>
+		<tr>
+			<th>18.30–20.00</th>
+			<td></td>
+		</tr>
+	</tbody>
+</table>
+
 <details>
 <summary class="h3">Semestr letni 2024/2025</summary>
 
