--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -76,19 +76,20 @@
 				<th scope="row">1</th>
 				<td>7 października 2025</td>
 				<td class="schedule-lecture">Zajęcia 1</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/1">muzyka</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/1">muzyka</a></td>
 			</tr>
 			<tr>
-				<th scope="row">2</th>
-				<td>14 października 2025</td>
-				<td class="schedule-lecture">Zajęcia 2</td>
-				<td class="schedule-lecture"></td>
+				<th rowspan="2" scope="row">2</th>
+				<td rowspan="2">14 października 2025</td>
+				<td rowspan="2" class="schedule-lecture">Zajęcia 2</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/2">literatura</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>21 października 2025</td>
 				<td class="schedule-lecture">Zajęcia 3</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
@@ -111,7 +112,6 @@
 			<tr>
 				<td class="schedule-lecture">Zajęcia 6</td>
 				<td class="schedule-lecture"></td>
-			</tr>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
