--- a/uj/zajecia/25-26z/assk/zajecia/1/index.html
+++ b/uj/zajecia/25-26z/assk/zajecia/1/index.html
@@ -282,7 +282,7 @@
 	<li><a href="https://genius.com/Lee-hyun-jun-expiration-date-lyrics">https://genius.com/Lee-hyun-jun-expiration-date-lyrics</a></li>
 </ul>
 
-<h2>Rodzina w Korei:</h3>
+<h2>Rodzina w Korei</h3>
 
 <ul>
 	<li>rodzina jako główny fundament społeczeństwa i podstawowa jednostka społeczna</li>
@@ -302,6 +302,24 @@
 
 <ul class="gallery">
 	<li><a href="uj/prelekcje/fsaa/2023/img/큰절.jpg"><img src="uj/prelekcje/fsaa/2023/img/큰절.jpg" alt="큰절"></a></li>
+</ul>
+
+<h2>Jazda pod wpływem alkoholu</h2>
+
+<ul class="gallery">
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/최근5년음주운전단속현황.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/최근5년음주운전단속현황.jpg" alt="최근 5년 음주운전 단속 현황"></a></li>
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/최근5년간충청권음주운전재범적발현황.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/최근5년간충청권음주운전재범적발현황.jpg" alt="최근 5년간 충청권 음주운전 재범 적발 현황"></a></li>
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/2019년6월25일음주운전처벌강화.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/2019년6월25일음주운전처벌강화.jpg" alt="2019년 6월 25일 음주운전 처벌 강화"></a></li>
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/한국청소년음주율추이.webp"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/한국청소년음주율추이.webp" alt="한국 청소년 음주율 추이"></a></li>
+</ul>
+
+<h2>Przemoc w rodzinie</h2>
+
+<ul class="gallery">
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/가정폭력실태.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/가정폭력실태.jpg" alt="가정폭력 실태"></a></li>
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/2019년가정폭력실태조사결과주요내용.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/2019년가정폭력실태조사결과주요내용.jpg" alt="2019년 가정폭력 실태조사 결과 주요 내용"></a></li>
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/2024아동학대통계현황.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/2024아동학대통계현황.jpg" alt="2024 아동학대 통계현황"></a></li>
+	<li><a href="uj/zajecia/25-26z/assk/zajecia/1/img/아동학대자와일반인비교.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/1/img/아동학대자와일반인비교.jpg" alt="아동학대자와 일반인 비교"></a></li>
 </ul>
 
 </body></html>
