--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -64,10 +64,10 @@
 	<table class="class-schedule">
 		<thead>
 			<tr>
-				<th scope="col">Tydzień</th>
-				<th scope="col">Data</th>
-				<th scope="col">Rodzaj</th>
-				<th scope="col">Temat</th>
+				<th scope="col">Week</th>
+				<th scope="col">Date</th>
+				<th scope="col">Type</th>
+				<th scope="col">Subject</th>
 			</tr>
 		</thead>
 
@@ -76,12 +76,14 @@
 				<th scope="row">1</th>
 				<td>7 October 2025</td>
 				<td class="schedule-lecture">Lecture 1</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/1">Introduction to Confucianism</a></td>
+				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/1">Introduction to Confucianism</a></td>
 			</tr>
 			<tr>
-				<th scope="row">2</th>
-				<td>14 October 2025</td>
-				<td class="schedule-lecture">Lecture 2</td>
+				<th rowspan="2" scope="row">2</th>
+				<td rowspan="2">14 October 2025</td>
+				<td rowspan="2" class="schedule-lecture">Lecture 2</td>
+			</tr>
+			<tr>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
@@ -111,7 +113,6 @@
 			<tr>
 				<td class="schedule-lecture">Lecture 6</td>
 				<td class="schedule-lecture"></td>
-			</tr>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
