--- a/uj/zajecia/25-26z/licc/lectures/1/index.html
+++ b/uj/zajecia/25-26z/licc/lectures/1/index.html
@@ -143,10 +143,6 @@
 	<li>part of official Confucian curriculum since Han dynasty (202 BC–9 AD; 25–220 AD)</li>
 </ul>
 
-<div>
-	<img src="uj/zajecia/25-26z/licc/lectures/1/img/Han%20dynasty.png" height="431" alt="map of Han dynasty China">
-</div>
-
 <ol>
 	<li>Classic of Poetry (<i>Shijing</i>, 詩經, 시경)</li>
 	<li>Book of Documents (<i>Shujing</i>, 書經, 서경)</li>
@@ -188,6 +184,103 @@
 
 <div>
 	<a href="uj/zajecia/25-26z/licc/lectures/1/img/삼강오륜.jpg"><img src="uj/zajecia/25-26z/licc/lectures/1/img/삼강오륜.jpg" height="700" alt="삼강오륜"></a>
+</div>
+
+<h2>Rise of Confucianism in China and East Asia</h2>
+
+<ul>
+	<li>dawn of Zhou dynasty (1045–221 BC) as the <em>golden age</em> for Confucius
+		<ul>
+			<li>ruling through moral example</li>
+			<li>practicing time-honoured rituals</li>
+			<li>prevailing social harmony</li>
+		</ul>
+	</li>
+	<li>split of China into small, independent, warring states around 700 BC
+		<ul>
+			<li>ruled by many small, feudal lords</li>
+			<li>authority maintained through laws, punishment, and force</li>
+			<li>lack of moral behaviour and concern for the people's welfare</li>
+		</ul>
+	</li>
+	<li>Confucius's goal to restore the moral order of the early Zhou
+		<ul>
+			<li>good government</li>
+			<li>proper social relations</li>
+			<li>respectful treatment of others</li>
+			<li>correct ritual performance</li>
+		</ul>
+	</li>
+	<li>lack of interest in Confucianism by the feudal warlords</li>
+	<li>change of Confucius's focus from rulers to his disciples
+		<ul>
+			<li>teaching disciples instead of engaging in politics</li>
+			<li>hope for embracing his political ideas and future succession in official life</li>
+			<li>compilation of the <i>Analects</i> as the main source of his thought</li>
+		</ul>
+	</li>
+	<li>Five Classics regarded as canonical in the Confucian tradition
+		<ul>
+			<li>principles of sage government</li>
+			<li>descriptions of proper ritual practice</li>
+			<li>beliefs about organisation of the universe</li>
+			<li>relationship between the universe and humankind</li>
+			<li>lessons from the Spring and Autumn period (771–256 BC)</li>
+		</ul>
+	</li>
+	<li>general concerns of the “hundred schools of thought”
+		<ul>
+			<li><em>What makes for an effective ruler?</em></li>
+			<li><em>What makes for an effective government?</em></li>
+			<li><em>What is the ideal relationship between the government and the people?</em></li>
+			<li><em>How can China achieve the unity, stability, and prosperity it once knew?</em></li>
+			<li><em>What are the responsibilities of the individual to his family, community, and state?</em></li>
+			<li><em>What is man's place in the universe?</em></li>
+		</ul>
+	</li>
+	<li>competition between Confucianism and other teachings
+		<ul>
+			<li>lively and prominent representatives (e.g. Mencius, Xunzi)</li>
+			<li>not yet favoured over teachings of other thinkers</li>
+		</ul>
+	</li>
+	<li>development of Confucianism under Han dynasty (202 BC–222 AD)
+		<ul>
+			<li>privileged status at the court provided by Emperor Wu (141–87 BC)</li>
+			<li>promotion of Confucian teachings and dismissal of non-Confucians from offices</li>
+			<li>creation of Imperial Academy in 124 BC to teach Confucian ideas</li>
+			<li>appointment to the official bureaucracy based on examinations</li>
+		</ul>
+	</li>
+	<li>Confucianism becoming the state ideology of China
+		<ul>
+			<li>essential ideological foundation of the imperial Chinese state</li>
+			<li>reliance on Confucian teachings for guidance and legitimacy</li>
+			<li>recruitment of government officials based on Confucian examinations</li>
+			<li>education in China centred around mastery of Confucian writings</li>
+		</ul>
+	</li>
+	<li>Spread of Confucian ideology to other Asian countries
+		<ul>
+			<li>establishment of a Confucian academy in Goguryeo in 372 AD</li>
+			<li>establishment of a Confucian academy in Silla in 682 AD</li>
+			<li>introduction of Confucian examination system in Silla in 788 AD</li>
+			<li>expansion of the examination system in the Goryeo period (918–1392)</li>
+			<li>peak of Confucian influence during the Joseon dynasty (1392–1910)</li>
+			<li>transmission of Chinese texts through Korea to Japan since 5<sup>th</sup> century AD</li>
+			<li>long-time prevalence of Buddhism and Shintō over Confucianism in Japan</li>
+			<li>raise of Confucianism's popularity in the Tokugawa period (1603–1868)</li>
+			<li>Confucian teachings as the moral basis of Japanese rulers and society</li>
+			<li>spread of Confucianism to Vietnam under Chinese rule from 111 BC to 939 AD</li>
+			<li>adoption of Chinese culture (writing, ideology, administration) in Vietnam</li>
+			<li>Confucian examinations as the basis of Vietnam's court officials recruitment until 1910s</li>
+		</ul>
+	</li>
+</ul>
+
+<div>
+	<img src="uj/zajecia/25-26z/licc/lectures/1/img/world30bc.jpg" height="520" alt="world in 30 BC">
+	<img src="uj/zajecia/25-26z/licc/lectures/1/img/theworldsmajorculturalspheres.jpg" height="719" alt="world in 30 BC">
 </div>
 
 </body></html>
