--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -83,14 +83,11 @@
 				<td class="schedule-lecture" colspan="2">한국어 문법 특징</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">2</th>
-				<td rowspan="2">2025년 10월 10일</td>
+				<th scope="row">2</th>
+				<td>2025년 10월 10일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<!-- <td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td> -->
+				<td class="schedule-lecture" colspan="2">한국인이 불안한 순간 TOP 9</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">3</th>
