--- a/uj/zajecia/24-25z/assk/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/assk/zajecia/3/index.html
@@ -23,6 +23,8 @@
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/3/img/경제성장통계.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/경제성장통계.jpg" alt="경제성장통계"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/3/img/노인빈곤율.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/노인빈곤율.jpg" alt="노인 빈곤율.jpg"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/3/img/사회계층이동.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/사회계층이동.jpg" alt="사회계층이동.jpg"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/3/img/superrich1.webp"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/superrich1.webp" alt="super rich 1"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/3/img/superrich2.webp"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/superrich2.webp" alt="super rich 2"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/9LcIsJlB1HY"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/9LcIsJlB1HY.webp" alt="노찾사 - 사계"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/YjKRRdKg9Es"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/YjKRRdKg9Es.webp" alt="How do people in shanty town of Korea survive through cold winter?"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/VYuJGYJVA_o"><img src="uj/zajecia/24-25z/assk/zajecia/3/img/VYuJGYJVA_o.webp" alt="Elderly citizens in S. Korea fighting hunger amid inflation"></a></li>
@@ -40,11 +42,11 @@
 <p>– Kiedy będzie „później”?</p>
 <p>– No już, pospieszmy się – powiedziała matka. – Jeśli będziesz się sumiennie uczył, to też będziesz mógł zamieszkać w ładnym domu i codziennie jeść mięso.</p>
 
-<p>– Jestem głodna – powiedziała Mionghi delikatnie się uśmiechając.
-– Co byś chciała zjeść? – zapytałem.
-Mionghi złapała mnie za rękę. Zaczęła wyliczać na moich palcach, mówiąc:
-– Lemoniada, winogrona, ramion, bułki, jabłka, jajka, mięso, ryż, wodorosty.
-Nie udało jej się nawet doliczyć do ostatniego palca. Wydawało się, że w tamtej chwili nie potrzebowała nic więcej.</p>
+<p>– Jestem głodna – powiedziała Mionghi delikatnie się uśmiechając.</p>
+<p>– Co byś chciała zjeść? – zapytałem.</p>
+<p>Mionghi złapała mnie za rękę. Zaczęła wyliczać na moich palcach, mówiąc:</p>
+<p>– Lemoniada, winogrona, ramion, bułki, jabłka, jajka, mięso, ryż, wodorosty.</p>
+<p>Nie udało jej się nawet doliczyć do ostatniego palca. Wydawało się, że w tamtej chwili nie potrzebowała nic więcej.</p>
 <p>Byliśmy przekonani, że trzeba się uczyć niezależnie od okoliczności – w końcu bez nauki nie będziemy w stanie uciec z tej klatki.</p>
 
 <h3>Fragment 2</h3>
