--- a/viiilo/zajecia/24-25z/jk1/zajecia/2/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/2/index.html
@@ -44,8 +44,7 @@
 <h2>Ćwiczenie wymowy</h2>
 
 <ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/ODrPJzNuCXI"><img src="viiilo/zajecia/24-25z/jk1/zajecia/2/img/ODrPJzNuCXI.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 1]"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/luq8hUTViv0"><img src="viiilo/zajecia/24-25z/jk1/zajecia/2/img/luq8hUTViv0.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 2]"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/-bE1G3Rnjmk"><img src="viiilo/zajecia/24-25z/jk1/zajecia/2/img/-bE1G3Rnjmk.webp" alt="한글 모음송✏️ | 아 야 어 여 오 요 우 유 으 이 | 모음송 | 한글 교육 | 학습동요 | Hangeul | 톰토미 (TOMTOMI)"></a></li>
 </ul>
 
 </body></html>
