--- a/viiilo/zajecia/24-25z/jk1/zajecia/3/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/3/index.html
@@ -39,11 +39,11 @@
 
 <p>* w nawiasie przybliżona polska wymowa</p>
 
-<h2>Ćwiczenie wymowy</h2>
+<!-- <h2>Ćwiczenie wymowy</h2> -->
 
-<ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/Iq5avO8ZI7E"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/Iq5avO8ZI7E.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 3]"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/2kTEqux-Bno"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/2kTEqux-Bno.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 4]"></a></li>
-</ul>
+<!-- <ul class="gallery"> -->
+	<!-- <li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/Iq5avO8ZI7E"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/Iq5avO8ZI7E.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 3]"></a></li> -->
+	<!-- <li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/2kTEqux-Bno"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/2kTEqux-Bno.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 4]"></a></li> -->
+<!-- </ul> -->
 
 </body></html>
