--- a/uj/zajecia/24-25z/ljk4/testy/2/index.html
+++ b/uj/zajecia/24-25z/ljk4/testy/2/index.html
@@ -20,7 +20,7 @@
 	</ul>
 	<p>형은 차가워 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 마음은 따뜻하다.</p>
 	<ol>
-		<li>보여도</li>
+		<li>보여도 <strong class="correct">✓</strong></li>
 		<li>보여야</li>
 		<li>보이다가</li>
 		<li>보이든지</li>
@@ -36,7 +36,7 @@
 	</ul>
 	<p>어려운 이웃을 <u>돕고자</u> 매년 봉사 활동에 참여하고 있다.</p>
 	<ol>
-		<li>돕기 위해서</li>
+		<li>돕기 위해서 <strong class="correct">✓</strong></li>
 		<li>돕는 대신에</li>
 		<li>돕기 무섭게</li>
 		<li>돕는 바람에</li>
@@ -55,7 +55,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/testy/2/img/3.png" alt="3">
 	</div>
 	<ol>
-		<li>건강 관리</li>
+		<li>건강 관리 <strong class="correct">✓</strong></li>
 		<li>안전 운전</li>
 		<li>전화 예절</li>
 		<li>절약 습관</li>
@@ -77,7 +77,7 @@
 	</div>
 	<ol>
 		<li>자가용으로 출퇴근한다고 응답한 직장인들의 비율이 줄었다.</li>
-		<li>걸어서 출퇴근하는 직장인은 2012년보다 2022년이 더 적었다.</li>
+		<li>걸어서 출퇴근하는 직장인은 2012년보다 2022년이 더 적었다. <strong class="correct">✓</strong></li>
 		<li>2022년에는 지하철을 타고 출퇴근하는 직장인이 가장 많았다.</li>
 		<li>2012년에 직장인들은 출퇴근할 때 버스를 제일 많이 이용했다.</li>
 	</ol>
@@ -106,7 +106,7 @@
 		<p>지난 24일에 ‘제7회 소비자 선정 최고 브랜드 대상’ 시상식이 인주신문사 대강당에서 개최됐다. 이 상은 소비자의 온라인 투표로 수상 브랜드가 선정되어 의미가 크다. 지난해와 같이 100개 브랜드가 상을 받았는데 올해는 처음으로 친환경 화장품 브랜드 두 개가 포함되었다.</p>
 	</div>
 	<ol>
-		<li>소비자가 수상 브랜드를 선정했다.</li>
+		<li>소비자가 수상 브랜드를 선정했다. <strong class="correct">✓</strong></li>
 		<li>기업들이 직접 온라인 투표에 참여했다.</li>
 		<li>지난해보다 더 많은 브랜드가 선정됐다.</li>
 		<li>친환경 화장품 브랜드는 상을 못 받았다.</li>
@@ -136,7 +136,7 @@
 	</div>
 	<ol>
 		<li>(나)-(다)-(가)-(라)</li>
-		<li>(나)-(다)-(라)-(가)</li>
+		<li>(나)-(다)-(라)-(가) <strong class="correct">✓</strong></li>
 		<li>(다)-(가)-(나)-(라)</li>
 		<li>(다)-(나)-(라)-(가)</li>
 	</ol>
@@ -165,7 +165,7 @@
 	</div>
 	<ol>
 		<li>손뼉을 치는</li>
-		<li>고개를 끄덕이는</li>
+		<li>고개를 끄덕이는 <strong class="correct">✓</strong></li>
 		<li>질문하면서 듣는</li>
 		<li>들으면서 기록하는</li>
 	</ol>
@@ -178,14 +178,14 @@
 	</div>
 	<h3>8. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>특히</li>
+		<li>특히 <strong class="correct">✓</strong></li>
 		<li>또는</li>
 		<li>역시</li>
 		<li>과연</li>
 	</ol>
 	<h3>9. 이 글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
-		<li>활쏘기로 판단력을 높일 수 있다.</li>
+		<li>활쏘기로 판단력을 높일 수 있다. <strong class="correct">✓</strong></li>
 		<li>활쏘기의 핵심은 숨을 참는 것이다.</li>
 		<li>활쏘기로 참을성을 기르기가 어렵다.</li>
 		<li>활쏘기는 단순한 운동이라 주목을 받았다.</li>
