--- a/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
@@ -21,7 +21,7 @@
 		<li>찾더니</li>
 		<li>찾으려면</li>
 		<li>구하도록</li>
-		<li>구하느라고</li>
+		<li>구하느라고 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -29,7 +29,7 @@
 	<p>친구와 내가 운동장에서 축구를 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 선생님이 나를 부르셨다.</p>
 	<ol>
 		<li>하거나</li>
-		<li>하는데</li>
+		<li>하는데 <strong class="correct">✓</strong></li>
 		<li>하면서</li>
 		<li>하든지</li>
 	</ol>
@@ -45,7 +45,7 @@
 	<ol>
 		<li>나오는 김에</li>
 		<li>나오는 사이에</li>
-		<li>나오는 바람에</li>
+		<li>나오는 바람에 <strong class="correct">✓</strong></li>
 		<li>나오는 대신에</li>
 	</ol>
 </div>
@@ -56,7 +56,7 @@
 		<li>고향일 뿐이다</li>
 		<li>고향이면 좋겠다</li>
 		<li>고향일 리가 없다</li>
-		<li>고향이나 마찬가지다</li>
+		<li>고향이나 마찬가지다 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -75,7 +75,7 @@
 	</div>
 	<ol>
 		<li>학원</li>
-		<li>마트</li>
+		<li>마트 <strong class="correct">✓</strong></li>
 		<li>사진관</li>
 		<li>세탁소</li>
 	</ol>
@@ -94,7 +94,7 @@
 	</div>
 	<ol>
 		<li>은행</li>
-		<li>식당</li>
+		<li>식당 <strong class="correct">✓</strong></li>
 		<li>세탁소</li>
 		<li>편의점</li>
 	</ol>
@@ -112,7 +112,7 @@
 	</div>
 	<ol>
 		<li>공원</li>
-		<li>식당</li>
+		<li>식당 <strong class="correct">✓</strong></li>
 		<li>꽃집</li>
 		<li>서점</li>
 	</ol>
@@ -133,7 +133,7 @@
 	<ol>
 		<li>건강 관리</li>
 		<li>전기 절약</li>
-		<li>화재 예방</li>
+		<li>화재 예방 <strong class="correct">✓</strong></li>
 		<li>교통 안전</li>
 	</ol>
 </div>
@@ -152,7 +152,7 @@
 	</div>
 	<ol>
 		<li>여성은 잠보다 운동을 더 중요하게 여긴다.</li>
-		<li>남녀 모두 자는 것을 가장 중요하게 생각한다.</li>
+		<li>남녀 모두 자는 것을 가장 중요하게 생각한다. <strong class="correct">✓</strong></li>
 		<li>아침을 먹는 사람은 여성보다 남성이 더 많다.</li>
 		<li>남성은 밥보다 건강 검진을 더 많이 선택했다.</li>
 	</ol>
@@ -184,7 +184,7 @@
 	<ol>
 		<li>동아리 지원은 일 년 동안 계속된다.</li>
 		<li>동아리는 고등학생들로만 구성되어야 한다.</li>
-		<li>동아리 활동비는 이백만 원까지 받을 수 있다.</li>
+		<li>동아리 활동비는 이백만 원까지 받을 수 있다. <strong class="correct">✓</strong></li>
 		<li>동아리 인원이 두세 명인 경우에도 신청할 수 있다.</li>
 	</ol>
 </div>
