--- a/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
@@ -344,7 +344,7 @@
 	</div>
 	<ol>
 		<li>(가)-(다)-(나)-(라)</li>
-		<li>(가)-(라)-(나)-(다)</li>
+		<li>(가)-(라)-(나)-(다) <strong class="correct">✓</strong></li>
 		<li>(라)-(다)-(나)-(가)</li>
 		<li>(라)-(가)-(다)-(나)</li>
 	</ol>
@@ -377,7 +377,7 @@
 		<p>타조는 멀리서 적이 다가와도 머리를 모래에 파묻고 있다. 그래서 위험이나 위기를 모르는 척 피하는 사람을 타조에 비유하곤 한다. 그런데 사실 타조는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 위해 이런 행동을 한다. 생각보다 청각이 발달한 타조는 땅에서 울리는 발소리를 듣고 적이 오는지를 파악하려는 것이다.</p>
 	</div>
 	<ol>
-		<li>적의 움직임을 알기</li>
+		<li>적의 움직임을 알기 <strong class="correct">✓</strong></li>
 		<li>먹이를 빨리 구하기</li>
 		<li>머리를 깨끗이 씻기</li>
 		<li>다른 타조를 공격하기</li>
@@ -406,7 +406,7 @@
 		<p>디지털 기기에 대한 의존도가 높아지면서 사람들이 무언가 직접 기억해야 할 일은 줄었다. 그래서 이전보다 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 생각할 수 있다. 그런데 뇌를 사용하는 방식이 이전과 달라졌을 뿐 사용량이 줄어든 것이 아니다. 과거에는 단순히 정보를 기억하는 데 뇌를 썼다면 이제는 과거보다 압도적으로 많아진 정보를 처리하는 데 사용하고 있는 것이다.</p>
 	</div>
 	<ol>
-		<li>뇌를 덜 사용한다고</li>
+		<li>뇌를 덜 사용한다고 <strong class="correct">✓</strong></li>
 		<li>기억력이 좋아졌다고</li>
 		<li>저장해야 할 정보가 많다고</li>
 		<li>디지털 기기를 많이 쓴다고</li>
@@ -415,7 +415,7 @@
 <div class="exam-question">
 	<h3>18.</h3>
 	<ul>
-		<li>쓰다 - być słonym</li>
+		<li>쓰다 - być gorzkim</li>
 		<li>꺼리다 - unikać</li>
 		<li>본능 - instynkt</li>
 		<li>관계 - związek</li>
@@ -440,7 +440,7 @@
 	</div>
 	<ol>
 		<li>지나친 과식을 피하려는</li>
-		<li>자신의 몸을 보호하려는</li>
+		<li>자신의 몸을 보호하려는 <strong class="correct">✓</strong></li>
 		<li>맛없는 음식을 멀리하려는</li>
 		<li>입맛이 변하는 것을 막으려는</li>
 	</ol>
@@ -454,7 +454,7 @@
 		<li>물질 - związki</li>
 		<li>겉 - wierzch</li>
 		<li>속 - wnętrze</li>
-		<li>대개 - </li>
+		<li>대개</li>
 		<li>자연적 - naturalny</li>
 		<li>숙성 - dojrzewanie</li>
 		<li>~에 비하다 - w porównaniu (z czymś)</li>
@@ -475,7 +475,7 @@
 	<h3>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
 	<ol>
 		<li>또는</li>
-		<li>또한</li>
+		<li>또한 <strong class="correct">✓</strong></li>
 		<li>그래도</li>
 		<li>그러면</li>
 	</ol>
@@ -486,7 +486,7 @@
 		<li>과일을 껍질까지 먹으면 건강에 좋다.</li>
 		<li>과일 향을 좋게 만드는 화학 물질이 있다.</li>
 		<li>화학 물질을 사용하면 과일이 속까지 잘 익는다.</li>
-		<li>자연 숙성 과일이 인공 숙성 과일보다 맛이 더 낫다.</li>
+		<li>자연 숙성 과일이 인공 숙성 과일보다 맛이 더 낫다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
