--- a/uj/index.html
+++ b/uj/index.html
@@ -198,36 +198,17 @@
 
 <h2>Prelekcje</h2>
 
-<h3>Festiwal Studiów Azjatyckich i Afrykańskich</h3>
-
 <ul>
-	<li><a href="uj/prelekcje/fsaa/2024">[2024] Trudności napotykane podczas tłumaczenia języka koreańskiego na język polski</a></li>
-	<li><a href="uj/prelekcje/fsaa/2023">[2023] Hierarchia w społeczeństwie koreańskim</a></li>
-</ul>
-
-<h3>Ogólnopolska Konferencja Studencko-doktorancka</h3>
-
-<ul>
-	<li><a href="uj/prelekcje/oksd/2023">[2023] Hoching: obsesja na punkcie tytułów w języku koreańskim</a></li>
+	<li><a href="uj/prelekcje/fsaa/2024">[2024] Trudności napotykane podczas tłumaczenia języka koreańskiego na język polski</a>, Festiwal Studiów Azjatyckich i Afrykańskich</li>
+	<li><a href="uj/prelekcje/fsaa/2023">[2023] Hierarchia w społeczeństwie koreańskim</a>, Festiwal Studiów Azjatyckich i Afrykańskich</li>
+	<li><a href="uj/prelekcje/oksd/2023">[2023] Hoching: obsesja na punkcie tytułów w języku koreańskim</a>, Ogólnopolska Konferencja Studencko-doktorancka</li>
 </ul>
 
 <h2>Referaty</h2>
 
-<h3>The Recent Paradigms in Korean Studies – MGTOW Gentlemen and MIC Barbarians<br>International Conference, Department of Korean Studies, University of Warsaw</h3>
-
 <ul>
-	<li><a href="uj/referaty/uw/2025">[2025] Understanding the Obstacles in Learning and Using <i>Banmal</i> and <i>Nopimmal</i> by Korean Language Learners</a></li>
-</ul>
-
-<h3>International Jagiellonian University Conference on Korean Studies</h3>
-
-<ul>
-	<li><a href="uj/referaty/uj/2025">[2025] Hierarchy in Korean Society in the Example of Ways of Greeting</a></li>
-</ul>
-
-<h3>계명 한국어교육 글로벌 컬로퀴엄</h3>
-
-<ul>
+	<li><a href="uj/referaty/uw/2025">[2025] Understanding the Obstacles in Learning and Using <i>Banmal</i> and <i>Nopimmal</i> by Korean Language Learners</a>, The Recent Paradigms in Korean Studies – MGTOW Gentlemen and MIC Barbarians, International Conference, Department of Korean Studies, University of Warsaw</li>
+	<li><a href="uj/referaty/uj/2025">[2025] Hierarchy in Korean Society in the Example of Ways of Greeting</a>, Korean Culture, History and Politics, 2<sup>nd</sup> International Jagiellonian University Conference on Korean Studies</li>
 	<li><a href="uj/referaty/kmu/2023">[2023] 계명 한국어교육 글로벌 컬로퀴엄</a></li>
 </ul>
 
