--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -92,7 +92,7 @@
 				<th scope="row" rowspan="2">3·4</th>
 				<td colspan="2" rowspan="2">2025년 10월 17·24일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
+				<td class="schedule-lecture" colspan="2">1과. 성격이 참 좋아 보여요</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
@@ -112,7 +112,7 @@
 				<th scope="row" rowspan="2">6</th>
 				<td colspan="2" rowspan="2">2025년 11월 21일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
+				<td class="schedule-lecture" colspan="2">1과. 성격이 참 좋아 보여요</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="2">문법</td>
@@ -124,7 +124,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
+				<td class="schedule-lecture" colspan="2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="7">8</th>
@@ -169,7 +169,7 @@
 				<th scope="row" rowspan="2">9</th>
 				<td colspan="2" rowspan="2">2025년 12월 12일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
+				<td class="schedule-lecture" colspan="2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
@@ -179,7 +179,7 @@
 				<th scope="row" rowspan="2">10</th>
 				<td colspan="2" rowspan="2">2025년 12월 19일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
+				<td class="schedule-lecture" colspan="2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
@@ -189,15 +189,15 @@
 				<th scope="row" rowspan="2">11</th>
 				<td colspan="2" rowspan="2">2026년 1월 9일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">3과. 생각 없이 걷다 보면 스트레스도 풀리고 기분도 좋아져요</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">시간 표현; 부정 표현</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">12</th>
-				<td rowspan="4">2025년 1월 16일</td>
+				<td rowspan="4">2025년 1월 23일</td>
 				<td rowspan="2">8:45~11:15</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
@@ -216,24 +216,24 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
-				<td colspan="2" rowspan="2">2026년 1월 23일</td>
-				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="2">14</th>
-				<td colspan="2" rowspan="2">2026년 1월 30일</td>
+				<th scope="row" rowspan="4">13</th>
+				<td rowspan="4">2026년 1월 30일</td>
+				<td rowspan="2">8:45~11:15</td>
 				<td class="schedule-exam">말하기 기말고사</td>
 				<td class="schedule-exam" colspan="2"></td>
 			</tr>
 			<tr>
 				<td class="schedule-exam">문법 기말고사</td>
 				<td class="schedule-exam" colspan="2"></td>
+			</tr>
+			<tr>
+				<td rowspan="2">13:15~15:45</td>
+				<td class="schedule-lecture">말하기</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture">문법</td>
+				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 		</tbody>
 	</table>
