--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -145,11 +145,11 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 1</td>
-				<td class="schedule-presentation">Iraida Moskaliuk</td>
+				<td class="schedule-presentation">Iraida Moskaliuk - Kultura prasowa w Ukrainie i Korei na przełomie XIX-XX w.</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation">Alicja Kozłowska</td>
+				<td class="schedule-presentation">Alicja Kozłowska - Postać dziewczyny w białym ubraniu: koreańska „Cheonyeo Gwishin” (천녀귀신), a polska „Południca”, „Morowa Dziewica” i „Cicha”</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
