--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -176,24 +176,14 @@
 				<td class="schedule-lecture" colspan="2">높임법 연습</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="4">10</th>
-				<td rowspan="4">2025년 12월 19일</td>
-				<td rowspan="2">8:45~11:15</td>
+				<th scope="row" rowspan="2">10</th>
+				<td colspan="2" rowspan="2">2025년 12월 19일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<td rowspan="2">13:15~15:45</td>
-				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">높임법 연습</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">11</th>
@@ -206,8 +196,18 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">12</th>
-				<td colspan="2" rowspan="2">2026년 1월 16일</td>
+				<th scope="row" rowspan="4">12</th>
+				<td rowspan="4">2025년 1월 16일</td>
+				<td rowspan="2">8:45~11:15</td>
+				<td class="schedule-lecture">말하기</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture">문법</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<td rowspan="2">13:15~15:45</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
