--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -141,7 +141,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 1</td>
-				<td class="schedule-presentation">Łukasz Jeruzal</td>
+				<td class="schedule-presentation">Łukasz Jeruzal - The Role of Confucianism in South Korea's Demographic Collapse</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 2</td>
