--- a/uj/zajecia/24-25l/mkmb/class/3/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/3/index.html
@@ -48,9 +48,21 @@
 <h3>번역</h3>
 
 <p>0. “40대 차장이 부서 막내” “위로금 3억 줄 테니 나가라”…늙어가는 대기업 특단 조치 꺼낸다</p>
+<ul>
+	<li>"Manager in their 40s is the youngest in the department", "we'll give you 300 million won, just leave the company" - big companies implement special measures to deal with aging employees</li>
+</ul>
 <p>1. ‘살려짐에 감사’</p>
+<ul>
+	<li>“Thanks for saving me”</li>
+</ul>
 <p>2. 한 대기업 임원의 카카오톡 프로필 문구입니다.</p>
+<ul>
+	<li>Such a phrase an executive at a large company put on their KakaoTalk profile.</li>
+</ul>
 <p>3. 인사 시즌 직후에 바뀐 문구다 보니 더 눈길을 끌었습니다.</p>
+<ul>
+	<li>As the phrase was put there right after the evaluation period, it drew even more attention.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -78,11 +90,29 @@
 <h3>번역</h3>
 
 <p>4. 그런데 이렇게 누군가는 살려짐에 안도하는 동안 누군가는 한숨을 지을지 모르겠습니다.</p>
+<ul>
+	<li>While someone feels relieved being saved like that, another one may sigh with disappointment.</li>
+</ul>
 <p>5. 자꾸 늦어지는 승진에, 모셔야 할 간부가 또 한 명 늘어났기 때문입니다.</p>
+<ul>
+	<li>This is because when a promotion is repeatedly postponed, there is now yet one more executive to accommodate.</li>
+</ul>
 <p>6-1. 실제로 인사 적체가 심한 기업에서는</p>
+<ul>
+	<li>In fact, in companies, where promotion is difficult,</li>
+</ul>
 <p>6-2. 40대 차·부장들이 조직의 막내 자리를 꿰차고 있습니다.</p>
+<ul>
+	<li>managers in their 40s take over the lowest positions.</li>
+</ul>
 <p>7. 50대가 조직의 허리를 담당하고 있고요.</p>
+<ul>
+	<li>In other words, workers in their 50s become the backbone of the organisation. </li>
+</ul>
 <p>8. 20대 팔팔한 신입 직원들이 갈수록 줄어드는 것과 대조를 이룹니다.</p>
+<ul>
+	<li>This contrasts with fresh new workers in their 20s, whose number decreases with time.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -110,11 +140,29 @@
 <h3>번역</h3>
 
 <p>9. 인구 고령화가 기업의 인력 고령화로 이어지는 모습입니다.</p>
+<ul>
+	<li>Population aging leads to workforce aging in companies.</li>
+</ul>
 <p>10. 삼성전자와 같은 내로라하는 대기업도 예외가 아닙니다.</p>
+<ul>
+	<li>Representative, large companies like Samsung Electronics are no exception.</li>
+</ul>
 <p>11. 조직이 고령화될수록 변화에 대한 저항감은 크기 마련입니다.</p>
+<ul>
+	<li>When the workers' age increases, their resistance to change also grows.</li>
+</ul>
 <p>12. 혁신을 이루기가 쉽지 않죠.</p>
+<ul>
+	<li>It means that achieving innovation is not easy.</li>
+</ul>
 <p>13-1. 국내 산업을 지탱하는 주요 기업들이</p>
+<ul>
+	<li>This is the reason why the main companies responsible for domestic industry</li>
+</ul>
 <p>13-2. 고령화 되는 것에 우려의 목소리가 나오는 이유입니다.</p>
+<ul>
+	<li>are concerned about aging.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -140,10 +188,25 @@
 <h3>번역</h3>
 
 <p>14. 기업에서 고연차 직원의 증가는 인건비 부담으로 이어지고 있습니다.</p>
+<ul>
+	<li>The increase in the number of long-term employees in a company leads to a burden of personnel costs.</li>
+</ul>
 <p>15. 일례로 삼성전자가 2010년 전 세계 직원에게 지급한 인건비는 13조5000억원이었습니다.</p>
+<ul>
+	<li>For instance, in 2010, Samsung Electronics paid 13.5 trillion won in personnel costs to their employees worldwide.</li>
+</ul>
 <p>16. 그러나 지난해 인건비는 38조원으로 13년 만에 3배 가까이 늘었습니다.</p>
+<ul>
+	<li>However, last year the company paid 38 trillion won, which is a 3-time increase within 13 years.</li>
+</ul>
 <p>17-1. 매출 대비 인건비 지출 비율을 따져봤을 때</p>
+<ul>
+	<li>If we look at the ratio of expenses in personnel costs in relation to sales,</li>
+</ul>
 <p>17-2. 2010년 이후 역대 최대 규모(14.7%)였죠.</p>
+<ul>
+	<li>it was the highest (14.7%) since the year 2010.</li>
+</ul>
 
 <h3>어휘</h3>
 
