--- a/uj/zajecia/24-25l/mkmb/class/4/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/4/index.html
@@ -33,7 +33,13 @@
 <h3>번역</h3>
 
 <p>0-1. 사랑하는 계명 가족과 계명의 일원이 되신 신입생 여러분,</p>
+<ul>
+	<li>Dear members of the Keimyung family, both older and new students,</li>
+</ul>
 <p>0-2. 새봄의 문턱에서 2025년 신학기를 여러분과 함께 맞이하게 되어 기대와 설렘이 앞섭니다.</p>
+<ul>
+	<li>I am thrilled and excited to welcome with you the upcoming 2025 spring semester together.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -56,8 +62,17 @@
 <h3>번역</h3>
 
 <p>1-1. 배움의 여정에 첫발을 내디딘 신입생 여러분을 진심으로 환영하며,</p>
+<ul>
+	<li>I sincerely greet the new students, who are taking a first step on the learning journey,</li>
+</ul>
 <p>1-2. 대학의 발전을 위해 헌신해 주신 교수님, 직원, 동문 여러분께도 깊은 감사의 말을 전합니다.</p>
+<ul>
+	<li>and I would also like to express my gratitude to professors, employees, and alumni, who have devoted themselves to the development of the university.</li>
+</ul>
 <p>2. 여러분의 헌신과 노력 덕분에 계명대학교는 지금껏 성장과 발전을 거듭하고 있습니다.</p>
+<ul>
+	<li>Thanks to your devotion and efforts, Keimyung University has been continuously growing and developing.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -86,10 +101,25 @@
 <h3>번역</h3>
 
 <p>3-1. 지난해 우리는 창립 125주년을 맞아 대학의 역사와 전통을 되새기며,</p>
+<ul>
+	<li>As we celebrated the 125th anniversary last year, we reflected on the university's history and tradition,</li>
+</ul>
 <p>3-2. 새로운 미래를 향한 비전을 확립하였습니다.</p>
+<ul>
+	<li>and we established a vision for the future.</li>
+</ul>
 <p>4-1. 125년이라는 긴 세월 동안 계명은</p>
+<ul>
+	<li>Keimyung University for the last 125 years</li>
+</ul>
 <p>4-2. ‘진리와 정의와 사랑의 나라를 위하여’라는 건학 이념을 바탕으로</p>
+<ul>
+	<li>on the basis of its foundation ideology, which is “for a country of truth, justice, and love”,</li>
+</ul>
 <p>4-3. 수많은 인재를 양성하고 사회에 기여해 왔습니다.</p>
+<ul>
+	<li>has contributed to the society by training many new talents.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -111,10 +141,25 @@
 <h3>번역</h3>
 
 <p>5-1. 지금 우리는 과거의 성과를 기반으로</p>
+<ul>
+	<li>Now, on the basis of those results,</li>
+</ul>
 <p>5-2. 창조적이고 역동적인 미래를 열어 가야 할 중요한 시점에 서 있습니다.</p>
+<ul>
+	<li>we are in a place to move forward into creative and dynamic future.</li>
+</ul>
 <p>6-1. 앞으로의 125년 또한 혁신적이고 창조적인 대학으로 성장하여</p>
+<ul>
+	<li>Moreover, during the next 125 years, we are going to grow creatively and dynamically,</li>
+</ul>
 <p>6-2. 시대의 변화에 발맞추며</p>
+<ul>
+	<li>keeping up with the changing times,</li>
+</ul>
 <p>6-3. 교육과 연구의 새로운 변화에 대응해 나갈 것입니다.</p>
+<ul>
+	<li>and responding to upcoming changes in education and academic research.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -136,10 +181,19 @@
 <h3>번역</h3>
 
 <p>7-1. 대학의 지속 가능한 발전을 위해서는</p>
+<ul>
+	<li>For sustainable development of our university,</li>
+</ul>
 <p>7-2. 학생 한 명, 한 명이 자신의 꿈을 실현할 수 있도록 돕는 것이 중요합니다.</p>
+<ul>
+	<li>it is important to support each and every student in making their dreams come true.</li>
+</ul>
 <p>8-1. 이를 위해 신입생 유치뿐만 아니라 학생들의 대학 생활 만족도를 높이고,</p>
 <p>8-2. 학문적 성취와 실질적인 취업 경쟁력을 갖출 수 있도록</p>
 <p>8-3. 교육의 질을 지속적으로 향상시킬 것입니다.</p>
+<ul>
+	<li>8. For that, not only are we going to attract new students, but will also increase their campus life satisfaction and continuously improve the quality of education in order to help them with academic achievements and competitiveness in the job market.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -161,10 +215,25 @@
 <h3>번역</h3>
 
 <p>9-1. 이와 함께 학생들의 취업과 학문적 성취도 향상을 위해</p>
+<ul>
+	<li>In order to help students with employment and better academic achievements,</li>
+</ul>
 <p>9-2. 창의적이고 실용적인 교육과정을 개발하고, 기업과 산학협력을 확대하여</p>
+<ul>
+	<li>we will develop a creative and practical curriculum, expand the industry-academic cooperation with companies,</li>
+</ul>
 <p>9-3. 학생들이 졸업 후 다양한 분야에서 활약할 수 있도록 지원하겠습니다.</p>
+<ul>
+	<li>and support them after graduation so that they can play active roles in various fields.</li>
+</ul>
 <p>10-1. 교수님들과 직원 여러분께서는 학문과 연구에 대한 열정을 바탕으로</p>
+<ul>
+	<li>Professors and employees, please use your passion for study and research</li>
+</ul>
 <p>10-2. 학생들에게 최상의 교육과 지원을 제공해 주시길 부탁드립니다.</p>
+<ul>
+	<li>to provide the best education and support for the students.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -194,10 +263,62 @@
 <h3>번역</h3>
 
 <p>11. 지금 우리가 함께 하는 이 순간, 계명의 새로운 역사가 시작됩니다.</p>
+<ul>
+	<li>In this moment, when we are together, Keimyung's new history begins.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
+
 <p>12-1. 과거 선배들께서 척박한 돌산을 깎아 학교를 세운 개척과 봉사의 정신으로 ‘오늘의 계명’을 만들어 왔듯이,</p>
+<ul>
+	<li>Just as seniors in the past have created today’s Keimyung by cutting down barren stone mountains in the spirit of pioneering and service that built the school,</li>
+	<li>In the past our alumni have created today's Keimong University, in the spirit that's established and in service of school to cut out the barren mountain of our future which</li>
+	<li>In the past our alumni have created “Today’s Keimyung” in the spirit of pioneering and service that built a school by cutting down a barren stony mountain,</li>
+	<li>Just as our predecessors built ‘today’s Keimyung’ on a barren stony mountain with the spirit of pioneering and service,</li>
+	<li>Just like our seniors, with pioneering and service spirit of trimming stony mountain to establishthe school, have built “today Keimyoung”,</li>
+	<li>Just like the seniors in the past have created “Today’s Keimyung” by cutting down barren stone mountains in the spirit of pioneering and service that built the school,</li>
+	<li>Just as our predecessors built this school by carving out a barren mountain with a spirit of pioneering and service</li>
+	<li>Just as your seniors built ‘today’s Keimyung’ by carving a campus out of shale rock mountains with pioneering spirit and dedication,</li>
+	<li>Just as our seniors in the past build “Today’s Keimyung” by drilling in a stony mountain to create this school with pioneering spirit and service,</li>
+</ul>
 <p>12-2. 우리 모두 함께 ‘내일의 계명’을 개척해 나가야 할 것입니다.</p>
+<ul>
+	<li>we will all have to pioneer tomorrow's Keimyung together.</li>
+	<li>We all will bring together</li>
+	<li>we will all have to pioneer tomorrow’s Keimyung together.</li>
+	<li>we must all work together to pave the way for ‘tomorrow’s Keimyung’. </li>
+	<li>we have to pioneer “tomorrow Keimyoung” all together.</li>
+	<li>we all together going to pioneer “Keimyung’s tomorrow “.</li>
+	<li>we must all work together to pioneer the "Keimyung of tomorrow."</li>
+	<li>it is now our responsibility to carve ‘tomorrow’s Keimyung.’</li>
+	<li>we must come together to pioneer “Tomorrow’s Keimyung”</li>
+</ul>
 <p>13-1. 이를 위해 각자의 자리에서 최선을 다하며,</p>
+<ul>
+	<li>Therefore, I ask you to do your best in your respective positions and</li>
+	<li>Because of this we all fo our best to make a place for everyone and</li>
+	<li>For that, I ask you to do your best at your position,</li>
+	<li>For that, we have to do our best in each one’s place</li>
+	<li>For this each of us do our best,</li>
+	<li>To do so, I urge each of us to give our best in our respective roles,</li>
+	<li>To this end, I hope each of you will do your best in your respective roles</li>
+	<li>For this, I ask everyone in their respective roles to do their best</li>
+</ul>
 <p>13-2. 더 나은 미래를 향해 힘차게 나아갈 것을 당부드립니다.</p>
+<ul>
+	<li>fiercely move forward towards a better future.</li>
+	<li>we want to ask you to move forward vigorously towards a better future.</li>
+	<li>and to move forward vigorously toward a better future.</li>
+	<li>I urge you to move energetically toward a better future.</li>
+	<li>Move vigorously forward towards the future.</li>
+	<li>and to move forward with determination toward a brighter future.</li>
+	<li>as we march toward a brighter future.</li>
+	<li>and to move vigorously towards a better future.</li>
+	<li>13. For this purpose, I urge everyone to do your best in your respective positions as we energetically walk towards a better future.</li>
+</ul>
+
+<hr class="homework">
+
 <p>14-1. 또한, 변화와 혁신의 과정 속에서도 우리의 소명을 잊지 않고,</p>
 <p>14-2. 계명의 정신을 이어가는 것이야말로 진정한 도전이자 가치 있는 여정이 될 것입니다.</p>
 
