--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -148,8 +148,8 @@
 			<tr>
 				<th scope="row">7</th>
 				<td>9 April 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">sport</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/5">생활체육도 '빈부격차'…소득 낮을수록 운동 안 해</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="3">8</th>
