--- a/viiilo/zajecia/24-25z/jk2/zajecia/7-1/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/7-1/index.html
@@ -34,4 +34,13 @@
 	<li>리 - wieś</li>
 </ul>
 
+<ul>
+	<li>해 - słońce</li>
+	<li>해가 뜨다 - wschodzić (np. o słońcu)</li>
+	<li>해가 지다 - zachodzić (np. o słońcu)</li>
+	<li>해돋이 - wschód słońca</li>
+	<li>해넘이 - zachód słońca</li>
+	<li>노을 - zorza (poranna/wieczorna)</li>
+</ul>
+
 </body></html>
