--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -35,55 +35,47 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>17 października 2024</td>
-				<td class="schedule-lecture">Lekcja 1</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/1">Język koreański (한국어)</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">2</th>
 				<td>31 października 2024</td>
-				<td class="schedule-lecture">Lekcja 2</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/2">Alfabet (한글) – samogłoski</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">3</th>
 				<td>7 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 3</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/3">Alfabet (한글) – spółgłoski</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">4</th>
 				<td>14 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 4</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/4">Alfabet (한글) - tworzenie wyrazów</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">5</th>
 				<td>21 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 5</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2" rowspan="4"><a href="viiilo/zajecia/24-25z/jk1/zajecia/5">1과. 안녕하세요? 저는 안나예요.</a></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
 				<td>28 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 6</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
 				<td>5 grudnia 2024</td>
-				<td class="schedule-lecture">Lekcja 7</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">8</th>
 				<td rowspan="2">12 grudnia 2024</td>
-				<td class="schedule-lecture" rowspan="2">Lekcja 8</td>
+				<td class="schedule-lecture" rowspan="2">Lekcja</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" colspan="2" rowspan="4"><a href="viiilo/zajecia/24-25z/jk1/zajecia/6">2과. 전화번호가 뭐예요?</a></td>
@@ -91,115 +83,113 @@
 			<tr>
 				<th scope="row">9</th>
 				<td>19 grudnia 2024</td>
-				<td class="schedule-lecture">Lekcja 9</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
 				<td>9 stycznia 2024</td>
-				<td class="schedule-lecture">Lekcja 10</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
 				<td>16 stycznia 2024</td>
-				<td class="schedule-lecture">Lekcja 11</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">12</th>
 				<td>13 lutego 2025</td>
-				<td class="schedule-lecture">Lekcja 12</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/7">3과. 제 가방은 책상 옆에 있어요</a></td>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk1/zajecia/7-1">설 (Nowy Rok)</a></td>
+				<td class="schedule-lecture">Lekcja</td>
+				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/7">3과. 제 가방은 책상 옆에 있어요</a></td>
+				<td class="schedule-presentation" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/7-1">설 (Nowy Rok)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">13</th>
 				<td>20 lutego 2025</td>
-				<td class="schedule-lecture">Lekcja 13</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
-				<td>27 lutego 2025</td>
-				<td class="schedule-lecture">Lekcja 14</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<th scope="row" rowspan="2">14</th>
+				<td rowspan="2">27 lutego 2025</td>
+				<td class="schedule-lecture" rowspan="2">Lekcja</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/8">4과. 한국어를 사랑해요</a></td>
+				<td class="schedule-presentation" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/8-1"></a></td>
 			</tr>
 			<tr>
 				<th scope="row">15</th>
 				<td>6 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 15</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
 				<th scope="row">16</th>
 				<td>13 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 16</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
 				<th scope="row">17</th>
 				<td>20 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 17</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">18</th>
 				<td>27 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 18</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">19</th>
 				<td>3 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja 19</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">20</th>
 				<td>10 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja 20</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">21</th>
 				<td>24 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja 21</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">22</th>
 				<td>15 maja 2025</td>
-				<td class="schedule-lecture">Lekcja 22</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">23</th>
 				<td>22 maja 2025</td>
-				<td class="schedule-lecture">Lekcja 23</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">24</th>
 				<td>29 maja 2025</td>
-				<td class="schedule-lecture">Lekcja 24</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">25</th>
 				<td>5 czerwca 2025</td>
-				<td class="schedule-lecture">Lekcja 25</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">26</th>
 				<td>12 czerwca 2025</td>
-				<td class="schedule-lecture">Lekcja 26</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">27</th>
 				<td>26 czerwca 2025</td>
-				<td class="schedule-lecture">Lekcja 27</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 		</tbody>
